--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#43a047</color>
     <color name="colorPrimaryDark">#00701a</color>
     <color name="colorAccent">#76d275</color>
+    <color name="colorSecondary">#03a9f4</color>
+    <color name="colorSecondaryDark">#007ac1</color>
 </resources>
