kickoff generating descision tree fragment

--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -12,4 +12,30 @@
         <item name="iconGravity">textStart</item>
     </style>
 
+    <style name="HeadingTextView">
+        <item name="android:textSize">16dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="BaseCardView" parent="CardView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">fill</item>
+        <item name="android:layout_margin">10dp</item>
+    </style>
+
+    <style name="PlasticCardView" parent="BaseCardView">
+        <item name="cardBackgroundColor">@color/colorYellowPlastic</item>
+    </style>
+
+    <style name="PaperCardView" parent="BaseCardView">
+        <item name="cardBackgroundColor">@color/colorBluePaper</item>
+    </style>
+
+    <style name="GlassCardView" parent="BaseCardView">
+        <item name="cardBackgroundColor">@color/colorGreenGlass</item>
+    </style>
 </resources>
