material fragments data, basic layout

--- a/androidApp/src/main/res/layout/fragment_tetrapack.xml
+++ b/androidApp/src/main/res/layout/fragment_tetrapack.xml
@@ -6,9 +6,12 @@
              tools:context=".TetrapackFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="tetrapack"/>
-
+            android:layout_height="match_parent">
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical"
+                      android:id="@+id/tipLinearLayout"/>
+    </ScrollView>
 </FrameLayout>
