--- a/androidApp/src/main/res/layout/fragment_plastic.xml
+++ b/androidApp/src/main/res/layout/fragment_plastic.xml
@@ -6,9 +6,14 @@
              tools:context=".PlasticFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="plastic"/>
+            android:layout_height="match_parent">
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical"
+                      android:id="@+id/tipLinearLayout">
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
