--- a/androidApp/src/main/res/layout/fragment_decision_tree.xml
+++ b/androidApp/src/main/res/layout/fragment_decision_tree.xml
@@ -16,6 +16,7 @@
                 android:id="@+id/cardsLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="8dp"
                 android:orientation="vertical"/>
     </ScrollView>
 </FrameLayout>
