--- a/androidApp/src/main/res/layout/activity_quiz_questions.xml
+++ b/androidApp/src/main/res/layout/activity_quiz_questions.xml
@@ -5,7 +5,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/sv_questions"
-        android:background="@color/colorSecondary"
         android:fillViewport="true"
         tools:context=".QuizQuestionsActivity">
 
@@ -20,18 +19,10 @@
         <TextView
                 android:id="@+id/tv_question"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:layout_margin="10dp"
                 android:gravity="center"
-                android:textSize="22sp"/>
-
-        <ImageView
-                android:id="@+id/iv_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:visibility="invisible"/>
-
+                style="@style/QuizTextQuestion"/>
         <LinearLayout
                 android:id="@+id/ll_progress_details"
                 android:layout_width="match_parent"
@@ -54,6 +45,7 @@
                     android:layout_height="wrap_content"
                     android:padding="15dp"
                     android:gravity="center"
+                    android:textColor="@color/quizText"
                     android:textSize="14sp"/>
 
         </LinearLayout>
@@ -63,48 +55,60 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:elevation="3sp"
                 android:background="@drawable/default_option_bg"
                 android:gravity="center"
                 android:padding="15dp"
-                android:textSize="18sp"/>
+                style="@style/QuizTextButton"/>
         <TextView
                 android:id="@+id/tv_option_two"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:elevation="3sp"
                 android:background="@drawable/default_option_bg"
                 android:gravity="center"
                 android:padding="15dp"
-                android:textSize="18sp"/>
+                style="@style/QuizTextButton"/>
         <TextView
                 android:id="@+id/tv_option_three"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:elevation="3sp"
                 android:background="@drawable/default_option_bg"
                 android:gravity="center"
                 android:padding="15dp"
-                android:textSize="18sp"/>
+                style="@style/QuizTextButton"/>
         <TextView
                 android:id="@+id/tv_option_four"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:elevation="3sp"
                 android:background="@drawable/default_option_bg"
                 android:gravity="center"
                 android:padding="15dp"
-                android:textSize="18sp"/>
+                style="@style/QuizTextButton"/>
 
         <Button
                 android:id="@+id/button_submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="@color/colorPrimaryDark"
+                android:background="@drawable/quiz_button_bg"
                 android:elevation="6dp"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-
+                android:textStyle="bold"
+                style="@style/QuizTextButton"/>
+        <TextView
+                android:id="@+id/tv_quiz_explanation"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                style="@style/QuizTextExplanation"
+                android:background="@drawable/item_quiz_explanation"
+                android:foreground="@android:drawable/ic_menu_help"
+                android:visibility="invisible"
+                tools:visibility="visible"/>
     </LinearLayout>
-
 </ScrollView>
