--- a/androidApp/src/main/res/layout/activity_quiz_result.xml
+++ b/androidApp/src/main/res/layout/activity_quiz_result.xml
@@ -2,37 +2,57 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@color/colorSecondary"
         android:padding="20dp"
-        tools:context=".QuizResultActivity">
+        tools:context=".QuizResultActivity"
+        android:background="@color/colorQuizLightGreen">
 
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Výsledek"
+            android:gravity="center"
+            android:layout_marginBottom="35dp"
+            android:textColor="@color/quizText"
             android:textSize="30sp"
             android:textStyle="bold"/>
-    <TextView
-            android:id="@+id/tv_score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
-    <Button
-            android:id="@+id/finish_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Ukončit"
+
+    <androidx.cardview.widget.CardView
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:cardCornerRadius="6dp"
             android:elevation="6dp"
-            android:background="@color/colorPrimaryDark"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <LinearLayout
+                android:orientation="vertical"
+                android:gravity="center"
+                android:padding="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:id="@+id/tv_score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
+            <Button
+                    android:id="@+id/finish_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:text="Ukončit"
+                    android:elevation="6dp"
+                    android:textSize="18dp"
+                    android:background="@drawable/quiz_button_bg"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
