--- a/androidApp/src/main/res/layout/fragment_quiz.xml
+++ b/androidApp/src/main/res/layout/fragment_quiz.xml
@@ -6,8 +6,8 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               tools:context=".QuizFragment"
               android:gravity="center"
-              android:background="@color/colorSecondary"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:background="@color/colorQuizLightGreen">
 
     <TextView
             android:id="@+id/textView"
@@ -18,6 +18,7 @@
             android:layout_marginBottom="35dp"
             android:textSize="35sp"
             android:textStyle="bold"
+            android:textColor="@color/quizText"
             android:gravity="center"/>
 
     <androidx.cardview.widget.CardView
@@ -25,6 +26,7 @@
             android:layout_marginEnd="20dp"
             app:cardCornerRadius="6dp"
             android:elevation="6dp"
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <LinearLayout
@@ -34,18 +36,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             <TextView
-                    android:text="popisek pro quiz"
+                    android:text="Otestuje své znalosti recyklování"
                     android:gravity="center"
                     android:textSize="18sp"
                     android:layout_marginBottom="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/quizText"
                     android:id="@+id/textView4"/>
             <Button
                     android:id="@+id/start_quiz_button"
                     android:text="Spustit"
                     android:gravity="center"
-                    android:background="@color/colorPrimaryDark"
+                    android:background="@drawable/quiz_button_bg"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
                     android:textSize="18sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
