--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -27,6 +27,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="SymbolTextViewSmaller" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">12dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="TipHeadingTextView" parent="TextAppearance.AppCompat">
         <item name="android:textSize">30dp</item>
         <item name="android:textStyle">bold</item>
@@ -34,6 +39,21 @@
 
     <style name="TipTextView" parent="TextAppearance.AppCompat">
         <item name="android:textSize">14dp</item>
+    </style>
+
+    <style name="QuizTextQuestion" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/quizText</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="QuizTextButton" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/quizText</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="QuizTextExplanation" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/quizText</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="BaseCardView" parent="CardView">
