--- a/androidApp/src/main/res/layout/fragment_decision_tree.xml
+++ b/androidApp/src/main/res/layout/fragment_decision_tree.xml
@@ -12,11 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-                android:id="@+id/cardsLayout"
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_recycling_code_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="8dp"
-                android:orientation="vertical"/>
+                android:layout_height="wrap_content"/>
     </ScrollView>
 </FrameLayout>
